This commit fixes the navigation bar alignment

--- a/style.css
+++ b/style.css
@@ -1,23 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 * {
-    color: #23A6F0;
-    background-color: #252B42;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+html {
+    color: #ffffff;
+    background-color: #252B42;
+    font-family: 'Monserrat', sans-serif;
+}
 .container {
-    position: absolute;
-    top: o;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    /* display: flex;
-    flex-direction: row; */
+    position: relative;
     background-image: url(./images/hero-cover3.png);
     background-size: cover;
+    background-position: top center;
     height: 100vh;
+    width: 100%;
     background-repeat: no-repeat;
     
 }
@@ -34,14 +33,32 @@
     z-index: 2;
  }
 .main {
-    position: relative;
+    margin-top: 20px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    background-repeat: no-repeat;
-/*     height: 0;
- */}
-.main .logo h1 {
-    background-color: none;
+}
+.main .nav-bar ul li {
+    display: inline-block;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+    text-transform: capitalize;
+    color: #ffffff;
+
+}
+.main .nav-bar ul li a {
+    text-decoration: none;
+    color: #ffffff;
+}
+.main .member {
+    box-sizing: border-box;
+    height: 30px;
+    width: auto;
+    right: 40px;
+    margin-right: 40px;
+    background-color: #21a6f1;
 }
